--- a/src/lib/assets/common.glide.css
+++ b/src/lib/assets/common.glide.css
@@ -57,8 +57,7 @@
 }
 
 .glide__slide {
-  width: 0px;
-  max-height: 300px;
+  height: 200px;
   border-radius: 1em;
   object-position: center center;
   object-fit: cover;
