ui: hardcode primary nav height.

--- a/src/lib/assets/common.css
+++ b/src/lib/assets/common.css
@@ -495,6 +495,7 @@ th, td {
 
 .primary-nav {
   display: flex;
+  height: 36px;
   align-items: center;
   justify-content: center;
   flex-direction: column;
