--- a/src/lib/styles/common.css
+++ b/src/lib/styles/common.css
@@ -380,14 +380,9 @@ th, td {
   object-fit: contain;
 }
 
+.card.glide[data-loaded="false"] > .glide__track,
 .card > .card-preview img.loading {
   opacity: 0;
-}
-
-.card.glide[data-loaded="false"] {
-  position: absolute;
-  visibility: collapse;
-  height: 0;
 }
 
 @media screen and (max-width: 767px) {
@@ -448,7 +443,10 @@ th, td {
 /* ::::: throbber ::::: */
 
 .card.phs {
+  position: absolute;
+  width: 100%;
   height: 200px;
+  z-index: 3;
   border-radius: 24px;
 }
 
