--- a/src/lib/styles/common.css
+++ b/src/lib/styles/common.css
@@ -27,10 +27,10 @@
 @media (prefers-color-scheme: dark) {
   :root {
     /* Primitives */
-    --palette-green: #33FF33;
+    --palette-green: #33ff33;
     --palette-green-dark: #00e600;
-    --palette-green-transparent: #33FF3338;
-    --palette-blue-light: #8AC4FF;
+    --palette-green-transparent: #33ff3338;
+    --palette-blue-light: #8ac4ff;
     --palette-gray-dark: #231f20;
 
     /* Semantic tokens */
@@ -71,7 +71,9 @@ a[href]:not([class]) {
   background-position: 0% 100%;
   background-repeat: no-repeat;
   background-size: 0% 2px;
-  transition: background-size 0.3s ease, color 0.1s ease;
+  transition:
+    background-size 0.3s ease,
+    color 0.1s ease;
 }
 
 a[href]:not([class]):focus,
@@ -89,7 +91,10 @@ hr {
   border: 1px solid var(--text-main);
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   color: var(--text-main);
   text-transform: uppercase;
   margin: 0 0 0.5em 0;
@@ -186,7 +191,10 @@ span.subtitle {
   justify-content: center;
   gap: 5px;
   position: relative;
-  transition: background-position 300ms ease, color 200ms ease, box-shadow 200ms ease-in-out;
+  transition:
+    background-position 300ms ease,
+    color 200ms ease,
+    box-shadow 200ms ease-in-out;
 }
 
 .button:hover,
@@ -198,7 +206,6 @@ span.subtitle {
 .button:focus {
   box-shadow: 0 0 0 2px var(--text-link) inset;
 }
-
 
 /* ::::: action buttons ::::: */
 
@@ -292,7 +299,8 @@ table {
   width: 100%;
 }
 
-th, td {
+th,
+td {
   border: 1px solid var(--text-main);
   width: 50%;
   padding: 0.5em;
@@ -406,7 +414,10 @@ th, td {
   background: var(--bg-surface);
   font-weight: inherit;
   transform: translateY(0);
-  transition: transform 200ms ease, box-shadow 200ms ease, background 200ms ease;
+  transition:
+    transform 200ms ease,
+    box-shadow 200ms ease,
+    background 200ms ease;
   border: 2px solid transparent;
   border-radius: 24px;
 }
@@ -430,10 +441,10 @@ th, td {
 
 @keyframes phs-position {
   0% {
-    background-position: -800px 0
+    background-position: -800px 0;
   }
   100% {
-    background-position: 800px 0
+    background-position: 800px 0;
   }
 }
 
